# SysY-2022

./: .gitignore  CMakeLists.txt  README.md  frontend_test_runner  run_all_tests.sh  test.s  test.sy  编译器前端详细文档.md
include/: ast.h  backend_riscv.h  error.h  location.h  logger.h  scanner_context.h  semantic_analyzer.h  symbol_table.h
include/ir/: ir.h  ir_builder.h  ir_data_structures.h  ir_generator.h  ir_optimizer.h  ir_printer.h  ir_utils.h
include/ir/analysis/: cfg_builder.h  dominators.h  loop_analysis.h
include/ir/transforms/: adce.h  cse.h  ind_var_simplify.h  inliner.h  inst_combine.h  licm.h  loop_unroll.h  mem2reg.h  sccp.h  simplify_cfg.h  sroa.h  tail_call_elim.h
src/ast/: ast.c
src/backend/: backend_riscv.c
src/driver/: driver.c
src/ir/: ir_builder.c  ir_data_structures.c  ir_generator.c  ir_lifecycle.c  ir_optimizer.c  ir_printer.c  ir_unified.c  ir_utils.c
src/ir/analysis/: cfg_builder.c  dominators.c  loop_analysis.c
src/ir/transforms/: adce.c  cse.c  ind_var_simplify.c  inliner.c  inst_combine.c  licm.c  loop_unroll.c  mem2reg.c  sccp.c  simplify_cfg.c  sroa.c  tail_call_elim.c
src/lexer/: lexer.l
src/parser/: parser.y  parser_driver.c
src/scanner/: scanner_context.c
src/semantic_analyzer/: semantic_analyzer.c
src/symbol_table/: symbol_table.c
src/utils/: error.c  logger.c
